Archive2/07/feda6986f4bc11/output
main.cpp:16:12: error: 'metafunc' is not a class template
     struct metafunc<s> {
            ^
main.cpp:16:24: error: explicit specialization of non-template 'plop::metafunc'
     struct metafunc<s> {
                        ^
